# GoldBot

./: .gitattributes  .gitignore  MANUAL_TEST_CHECKLIST.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  ErrorBoundary.tsx  api.ts  crash.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: main.rs  test_helpers.rs
src-tauri/tests/: inbound_state_machine.rs
