[package]
name = "gym-lead-booker-demo"
version = "0.1.0"
description = "Gym Lead Booker (Demo Mode)"
authors = ["Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
